--- a/ex013/index.html
+++ b/ex013/index.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promoção</title>
+    <title>Salário</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <p>Digite um preço de produto (Ex: 95.50)</p>
-        <input type="text" name="inputPreco" id="inputPreco">
+        <p>Digite seu salário</p>
+        <input type="text" name="inputSalario" id="inputSalario">
         <p id="res"></p>
 
-        <button onclick="desconto()">Mostrar desconto</button>
+        <button onclick="calcularSalario()">Calcular aumento</button>
     </div>
-    
-    <script src="script.js">
 
-    </script>
+    <script src="script.js"></script>
     
 </body>
 </html>
