--- a/ex023/index.html
+++ b/ex023/index.html
@@ -19,7 +19,9 @@
         <input type="text" name="inputValor" id="inputValor">
         <p id="res"></p>
 
-        <button onclick="desconto()">Calcular</button>
+        <button onclick="Calcular()">Calcular</button>
+
+        <p id="res"></p>
 
     </div>
 
