--- a/ex004/index.html
+++ b/ex004/index.html
@@ -15,7 +15,7 @@
         <p>Digite o SEGUNDO número</p>
         <input type="number" name="inputNum2" id="inputNum2"><br>
 
-        <button onclick="somarN()">Somar</button>
+        <button id="btn">Somar</button>
 
         <p id="somou"></p>
 
