--- a/ex006/index.html
+++ b/ex006/index.html
@@ -13,7 +13,7 @@
         <p id="antecessor"></p>
         <p id="sucessor"></p>
 
-        <button onclick="antecessorSucessor()">Mostrar</button>
+        <button id="btn">Mostrar</button>
 
     </div>
 
