--- a/ex007/index.html
+++ b/ex007/index.html
@@ -14,7 +14,7 @@
         <p id="dobro"></p>
         <p id="terco"></p>
 
-        <button onclick="mostrar()">Mostrar</button>
+        <button id="btn">Mostrar</button>
     </div>
 
     <script src="script.js"></script>
