--- a/ex008/index.html
+++ b/ex008/index.html
@@ -17,7 +17,7 @@
         <p id="centimetro"></p><!-- 0,01 metros-->
         <p id="milimetros"></p><!-- 0,001 metros-->
 
-        <button onclick="converter()">Converter</button>
+        <button id="btn">Converter</button>
     </div>
 
     <script src="script.js"></script>
