--- a/ex011/index.html
+++ b/ex011/index.html
@@ -17,7 +17,7 @@
 
         <p id="res"></p>
 
-        <button onclick="calcularDelta()">Calcular Delta</button>
+        <button id="btn">Calcular Delta</button>
 
     </div>
 
