--- a/ex014/index.html
+++ b/ex014/index.html
@@ -14,7 +14,7 @@
         <input type="text" name="inputDia" id="inputDia">
         <p id="res"></p>
 
-        <button onclick="aluguel()">Calcular preço</button>
+        <button id="btn">Calcular preço</button>
     </div>
 
     <script src="script.js"></script>
