--- a/ex017/index.html
+++ b/ex017/index.html
@@ -11,7 +11,7 @@
         <p>Digite sua velocidade em km/h:</p>
         <input type="text" name="inputVelocidade" id="inputVelocidade">
         <p id="res"></p>
-        <button onclick="rolaMulta()">Mostrar</button>
+        <button id="btn">Mostrar</button>
     </div>
 
     <script src="script.js"></script>
