--- a/ex018/index.html
+++ b/ex018/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="inputAno" id="inputAno">
         <p id="res"></p>
 
-        <button onclick="votar()">Mostrar</button>
+        <button id="btn">Mostrar</button>
     </div>
     
     <script src="script.js"></script>
