--- a/ex021/index.html
+++ b/ex021/index.html
@@ -13,7 +13,7 @@
         <input type="text" name="inputAno" id="inputAno">
         <p id="res"></p>
         
-        <button onclick="bissexto()">Mostrar</button>
+        <button id="btn">Mostrar</button>
     </div>
     
     <script src="script.js"></script>
