--- a/ex005/index.html
+++ b/ex005/index.html
@@ -16,7 +16,7 @@
         
         <p id="Media"></p>
 
-        <button onclick="CalcularMedia()">Calcular</button>
+        <button id="btn">Calcular</button>
 
     </div>
 
