--- a/ex009/index.html
+++ b/ex009/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="inputValor" id="inputValor">
         <p id="dolar"></p>
 
-        <button onclick="converterDolar()">Converter para Dólar</button>
+        <button id="btn">Converter para Dólar</button>
     </div>
 
     <script src="script.js"></script>
