--- a/ex010/index.html
+++ b/ex010/index.html
@@ -16,7 +16,7 @@
         <p id="area"></p>
         <p id="tinta"></p>
 
-        <button onclick="areaTinta()">Calcular</button>
+        <button id="btn">Calcular</button>
     </div>
     
     <script src="script.js"></script>
