--- a/ex012/index.html
+++ b/ex012/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="inputPreco" id="inputPreco">
         <p id="res"></p>
 
-        <button onclick="desconto()">Mostrar desconto</button>
+        <button id="btn">Mostrar desconto</button>
     </div>
     
     <script src="script.js">
