--- a/ex013/index.html
+++ b/ex013/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="inputSalario" id="inputSalario">
         <p id="res"></p>
 
-        <button onclick="calcularSalario()">Calcular aumento</button>
+        <button id="btn">Calcular aumento</button>
     </div>
 
     <script src="script.js"></script>
