--- a/ex015/index.html
+++ b/ex015/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="inputDias" id="inputDias">
         <p id="res"></p>
 
-        <button onclick="salario()">Calcular salário</button>
+        <button id="btn">Calcular salário</button>
     </div>
 
     <script src="script.js"></script>
