--- a/ex016/index.html
+++ b/ex016/index.html
@@ -15,7 +15,7 @@
 
         <p id="res"></p>
 
-        <button onclick="vaiMorrer()">Calcular</button>
+        <button id="btn">Calcular</button>
     </div>
 
     <script src="script.js"></script>
