--- a/ex019/index.html
+++ b/ex019/index.html
@@ -15,7 +15,7 @@
         <input type="text" name="inputNota2" id="inputNota2">
 
         <p id="res"></p>
-        <button onclick="media()">Mostrar média</button>
+        <button id="btn">Mostrar média</button>
     </div>
 
     <script src="script.js"></script>
