--- a/ex020/index.html
+++ b/ex020/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="inputNumero" id="inputNumero">
         <p id="res"></p>
 
-        <button onclick="parOuImpar()">Mostrar</button>
+        <button id="btn">Mostrar</button>
     </div>
 
     <script src="script.js"></script>
