--- a/ex022/index.html
+++ b/ex022/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="inputAnoN" id="inputAnoN">
         <p id="res"></p>
 
-        <button onclick="alistar()">Mostrar</button>
+        <button id="btn">Mostrar</button>
     </div>
     
     <script src="script.js"></script>
